[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/Title.gd" type="Script" id=1]
[ext_resource path="res://GFX/titleBG.jpg" type="Texture" id=2]
[ext_resource path="res://GFX/title.png" type="Texture" id=3]
[ext_resource path="res://GFX/new_game.png" type="Texture" id=4]
[ext_resource path="res://GFX/about_game.png" type="Texture" id=5]
[ext_resource path="res://GFX/exit_game.png" type="Texture" id=6]
[ext_resource path="res://SFX/rollover6.ogg" type="AudioStream" id=7]
[ext_resource path="res://SFX/click3.ogg" type="AudioStream" id=8]
[ext_resource path="res://SFX/338065__geronimogeronimo__space-alarm.ogg" type="AudioStream" id=9]
[ext_resource path="res://Scenes/About.tscn" type="PackedScene" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 76.8052, 10.998 )

[sub_resource type="InputEventAction" id=2]
action = "\"ui_cancel\""

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 2 )

[node name="Title" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
scale = Vector2( 0.533333, 0.555573 )
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="NightWatch" type="Sprite" parent="."]
position = Vector2( 515, 280 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="Options" type="Node2D" parent="."]

[node name="NewGameArea" type="Area2D" parent="Options"]
position = Vector2( -10.1459, 55.4409 )
__meta__ = {
"_edit_group_": true
}

[node name="NewGameCol" type="CollisionShape2D" parent="Options/NewGameArea"]
visible = false
position = Vector2( 515, 220 )
scale = Vector2( 15, -2.5 )
shape = SubResource( 1 )

[node name="NewGameSprite" type="Sprite" parent="Options/NewGameArea"]
position = Vector2( 521, 240 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="AboutGameArea" type="Area2D" parent="Options"]
position = Vector2( -7.45428, 45.2985 )
scale = Vector2( 0.99737, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AboutGameCol" type="CollisionShape2D" parent="Options/AboutGameArea"]
visible = false
position = Vector2( 506.616, 264.181 )
shape = SubResource( 1 )

[node name="AboutGameSprite" type="Sprite" parent="Options/AboutGameArea"]
position = Vector2( 530, 260 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="ExitGameArea" type="Area2D" parent="Options"]
position = Vector2( -5.50317, 33.775 )
__meta__ = {
"_edit_group_": true
}

[node name="ExitGameCol" type="CollisionShape2D" parent="Options/ExitGameArea"]
visible = false
position = Vector2( 510, 315 )
shape = SubResource( 1 )

[node name="ExitGameSprite" type="Sprite" parent="Options/ExitGameArea"]
position = Vector2( 526, 260 )
scale = Vector2( 0.53017, 0.523954 )
texture = ExtResource( 6 )

[node name="SFXRollOver" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="SFXSelect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
autoplay = true

[node name="AboutCtrl" parent="." instance=ExtResource( 10 )]
visible = false

[node name="Buttons" type="Control" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 312.0
margin_top = 500.0
margin_right = 712.0
margin_bottom = 580.0
rect_min_size = Vector2( 400, 80 )

[node name="Back" type="Button" parent="Buttons"]
anchor_right = 1.0
anchor_bottom = 1.0
shortcut = SubResource( 3 )
text = "Back Button"
[connection signal="input_event" from="Options/NewGameArea" to="." method="_on_NewGameArea_input_event"]
[connection signal="mouse_entered" from="Options/NewGameArea" to="." method="_on_NewGameArea_mouse_entered"]
[connection signal="mouse_exited" from="Options/NewGameArea" to="." method="_on_NewGameArea_mouse_exited"]
[connection signal="input_event" from="Options/AboutGameArea" to="." method="_on_AboutGameArea_input_event"]
[connection signal="mouse_entered" from="Options/AboutGameArea" to="." method="_on_AboutGameArea_mouse_entered"]
[connection signal="mouse_exited" from="Options/AboutGameArea" to="." method="_on_AboutGameArea_mouse_exited"]
[connection signal="input_event" from="Options/ExitGameArea" to="." method="_on_ExitGameArea_input_event"]
[connection signal="mouse_entered" from="Options/ExitGameArea" to="." method="_on_ExitGameArea_mouse_entered"]
[connection signal="mouse_exited" from="Options/ExitGameArea" to="." method="_on_ExitGameArea_mouse_exited"]
[connection signal="pressed" from="Buttons/Back" to="." method="_on_Back_pressed"]
